--- a/task16/front/index.html
+++ b/task16/front/index.html
@@ -10,6 +10,7 @@
 <script src="js/services/OrdersService.js"></script>
 <script src="js/services/WriterService.js"></script>
 <script src="js/controllers/BookCtrl.js"></script>
+<script src="js/controllers/CloseCtrl.js"></script>
 <script src="js/controllers/CustomerCtrl.js"></script>
 <script src="js/controllers/OrdersCtrl.js"></script>
 <script src="js/controllers/WriterCtrl.js"></script>
@@ -39,5 +40,8 @@
 			</ul>
 		</div>
 	</nav>
+
+	
+	
 </body>
 </html>
